Wait for auth server url

--- a/action.yml
+++ b/action.yml
@@ -29,8 +29,10 @@ inputs:
     required: false
 
 outputs:
-  url:
+  app_url:
     description: 'The fully qualified deploy preview URL'
+  auth_url:
+    description: 'The fully qualified deploy Auth server preview URL'
   vercel_jwt:
     description: 'If the deployment is using password protection, this will be a JWT. Otherwise, outputs an empty string'
 runs:
